--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 798608d
+	base = d3aa987
 	trimbase = 
 	parent = release/indigo/ntpd_driver
-	previous = 
+	previous = 798608d
