--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 16c3163
+	base = dc21c40
 	trimbase = 
 	parent = debian/indigo/ntpd_driver
-	previous = 
+	previous = 16c3163
