--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package>
   <name>ntpd_driver</name>
-  <version>1.0.1</version>
+  <version>1.0.2</version>
   <description>ntpd_driver sends TimeReference message time to ntpd server</description>
 
   <maintainer email="vooon341@gmail.com">Vladimir Ermakov</maintainer>
@@ -28,5 +28,23 @@
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
+    <rosindex>
+      <tags>
+        <tag>ntp</tag>
+        <tag>time</tag>
+        <tag>ntpd</tag>
+        <tag>chrony</tag>
+      </tags>
+      <nodes>
+        <node>
+          <name>shm_driver</name>
+          <description>This node sends time via SHM interface.</description>
+          <ros_api>
+            <sub name="~/time_ref" type="sensor_msgs/TimeReference">Time source topic.</sub>
+            <param name="~/shm_unit" type="int">SHM Unit (must be same as in ntp server config).</param>
+          </ros_api>
+        </node>
+      </nodes>
+    </rosindex>
   </export>
 </package>
