--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 789e11c
+	base = 082ac60
 	trimbase = 
 	parent = release/indigo/ntpd_driver
-	previous = 
+	previous = 789e11c
