--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6ef6f4a
+	base = 06e7275
 	trimbase = 
 	parent = rpm/indigo/ntpd_driver
-	previous = 
+	previous = 6ef6f4a
