--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7b8e604
+	base = eef6245
 	trimbase = 
 	parent = release/jade/ntpd_driver
-	previous = 
+	previous = 7b8e604
