--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 357fea6
+	base = e9f69a4
 	trimbase = 
 	parent = debian/jade/ntpd_driver
-	previous = 
+	previous = 357fea6
