--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6392ece
+	base = e9e82fb
 	trimbase = 
 	parent = rpm/jade/ntpd_driver
-	previous = 
+	previous = 6392ece
