--- a/tracks.yaml
+++ b/tracks.yaml
@@ -33,9 +33,10 @@ tracks:
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc}
     devel_branch: master
+    last_version: 1.0.2
     name: upstream
     patches: null
-    release_inc: -1
+    release_inc: '0'
     release_repo_url: git@github.com:vooon/ntpd_driver-release.git
     release_tag: :{version}
     ros_distro: jade
