--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>ntpd_driver</name>
-  <version>1.1.0</version>
+  <version>1.1.1</version>
   <description>ntpd_driver sends TimeReference message time to ntpd server</description>
 
   <maintainer email="vooon341@gmail.com">Vladimir Ermakov</maintainer>
@@ -19,6 +19,8 @@
   <depend>message_runtime</depend>
   <depend>roscpp</depend>
   <depend>sensor_msgs</depend>
+  <depend>cmake_modules</depend>
+  <depend>libpoco-dev</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
@@ -38,6 +40,7 @@
             <sub name="~/time_ref" type="sensor_msgs/TimeReference">Time source topic. (default topic name)</sub>
             <param name="~/shm_unit" type="int" default="2">SHM Unit (must be same as in ntp server config).</param>
             <param name="~/time_ref_topic" type="string" default="time_ref">Topic name (may be used instead of remap).</param>
+            <param name="~/fixup_date" type="bool" default="false">Enable date fixup.</param>
           </ros_api>
         </node>
       </nodes>
