--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.2-0": ["Sat Jan 24 2015", "Vladimir Ermakov", "vooon341@gmail.com"], "1.1.0-0": ["Fri Apr 17 2015", "Vladimir Ermakov", "vooon341@gmail.com"]}
+{"1.1.1-0": ["Sat Jul 18 2015", "Vladimir Ermakov", "vooon341@gmail.com"], "1.0.2-0": ["Sat Jan 24 2015", "Vladimir Ermakov", "vooon341@gmail.com"], "1.1.0-0": ["Fri Apr 17 2015", "Vladimir Ermakov", "vooon341@gmail.com"]}
