--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 86c141e
+	base = b49a722
 	trimbase = 
 	parent = release/kinetic/ntpd_driver
-	previous = 
+	previous = 86c141e
