--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ace338c
+	base = e38344b
 	trimbase = 
 	parent = debian/kinetic/ntpd_driver
-	previous = 
+	previous = ace338c
