--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fa347ab
+	base = 4e9a0c4
 	trimbase = 
 	parent = debian/kinetic/ntpd_driver
-	previous = 
+	previous = fa347ab
