--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 375752f
+	base = 61e9848
 	trimbase = 
 	parent = rpm/kinetic/ntpd_driver
-	previous = 
+	previous = 375752f
