--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f58ebab
+	base = 9278c0b
 	trimbase = 
 	parent = debian/lunar/ntpd_driver
-	previous = 
+	previous = f58ebab
