--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b13744f
+	base = 77c9a24
 	trimbase = 
 	parent = debian/lunar/ntpd_driver
-	previous = 
+	previous = b13744f
