--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 97cd832
+	base = dcb3659
 	trimbase = 
 	parent = release/lunar/ntpd_driver
-	previous = 
+	previous = 97cd832
