--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = aa776a0
+	base = a2121db
 	trimbase = 
 	parent = rpm/lunar/ntpd_driver
-	previous = 
+	previous = aa776a0
