--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7858973
+	base = ebdfc20
 	trimbase = 
 	parent = release/melodic/ntpd_driver
-	previous = 
+	previous = 7858973
