--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b0130dc
+	base = 749023a
 	trimbase = 
 	parent = debian/melodic/ntpd_driver
-	previous = 
+	previous = b0130dc
