--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1c5766f
+	base = 69caad4
 	trimbase = 
 	parent = debian/melodic/ntpd_driver
-	previous = 
+	previous = 1c5766f
