--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 52fbad6
+	base = 473d213
 	trimbase = 
 	parent = rpm/melodic/ntpd_driver
-	previous = 
+	previous = 52fbad6
