--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/ntpd_driver
-	previous = 
-	base = 21b9dff
+	previous = 21b9dff
+	base = e196a97
 	trim = 
 	trimbase = 
