--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/eloquent/ntpd_driver
-	previous = 
-	base = b8cba47
+	previous = b8cba47
+	base = 4e5382c
 	trim = 
 	trimbase = 
