--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/ntpd_driver
-	previous = 
-	base = c30dd27
+	previous = c30dd27
+	base = 55d0e2f
 	trim = 
 	trimbase = 
