--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/ntpd_driver
-	previous = 
-	base = 7e4eca1
+	previous = 7e4eca1
+	base = c4f8c0d
 	trim = 
 	trimbase = 
