--- a/package.xml
+++ b/package.xml
@@ -1,18 +1,18 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="utf-8"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>ntpd_driver</name>
-  <version>2.0.1</version>
+  <version>2.0.2</version>
   <description>ntpd_driver sends TimeReference message time to ntpd server</description>
 
   <maintainer email="vooon341@gmail.com">Vladimir Ermakov</maintainer>
-  <author email="vooon341@gmail.com">Vladimir Ermakov</author>
-
-  <license>BSD</license>
+  <license file="LICENSE">BSD</license>
 
   <url type="website">http://wiki.ros.org/ntpd_driver</url>
   <url type="repository">https://github.com/vooon/ntpd_driver.git</url>
   <url type="bugtracker">https://github.com/vooon/ntpd_driver/issues</url>
+
+  <author email="vooon341@gmail.com">Vladimir Ermakov</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
