--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/ntpd_driver
-	previous = 
-	base = 9abacd8
+	previous = 9abacd8
+	base = 7f4515b
 	trim = 
 	trimbase = 
