--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/ntpd_driver
-	previous = 
-	base = be33fc0
+	previous = be33fc0
+	base = c9ab30b
 	trim = 
 	trimbase = 
