--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/ntpd_driver
-	previous = 
-	base = 41ef8f8
+	previous = 41ef8f8
+	base = 9e209ed
 	trim = 
 	trimbase = 
