--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/noetic/ntpd_driver
-	previous = 
-	base = 055eff1
+	previous = 055eff1
+	base = 8600a55
 	trim = 
 	trimbase = 
