--- a/package.xml
+++ b/package.xml
@@ -1,30 +1,34 @@
-<?xml version="1.0"?>
-<package format="2">
+<?xml version="1.0" encoding="utf-8"?>
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>ntpd_driver</name>
-  <version>1.2.0</version>
+  <version>2.1.0</version>
   <description>ntpd_driver sends TimeReference message time to ntpd server</description>
 
   <maintainer email="vooon341@gmail.com">Vladimir Ermakov</maintainer>
-  <author email="vooon341@gmail.com">Vladimir Ermakov</author>
-
-  <license>BSD</license>
+  <license file="LICENSE">BSD</license>
 
   <url type="website">http://wiki.ros.org/ntpd_driver</url>
   <url type="repository">https://github.com/vooon/ntpd_driver.git</url>
   <url type="bugtracker">https://github.com/vooon/ntpd_driver/issues</url>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <author email="vooon341@gmail.com">Vladimir Ermakov</author>
 
-  <depend>message_generation</depend>
-  <depend>message_runtime</depend>
-  <depend>roscpp</depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
+
+  <depend>rclcpp</depend>
+  <depend>rclcpp_components</depend>
   <depend>sensor_msgs</depend>
-  <depend>cmake_modules</depend>
   <depend>libpoco-dev</depend>
 
+  <!-- <exec_depend>launch_xml</exec_depend> -->
 
-  <!-- The export tag contains other, unspecified, tags -->
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
+
   <export>
+    <build_type>ament_cmake</build_type>
+
     <rosindex>
       <tags>
         <tag>ntp</tag>
