--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/galactic/ntpd_driver
-	previous = 
-	base = 80e5be8
+	previous = 80e5be8
+	base = c1a9a6e
 	trim = 
 	trimbase = 
