--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/galactic/ntpd_driver
-	previous = 
-	base = dff755d
+	previous = dff755d
+	base = 4b5ab45
 	trim = 
 	trimbase = 
