--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/galactic/ntpd_driver
-	previous = 
-	base = 9b42e53
+	previous = 9b42e53
+	base = fa2f671
 	trim = 
 	trimbase = 
