--- a/tracks.yaml
+++ b/tracks.yaml
@@ -65,9 +65,10 @@ tracks:
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc} --os-name rhel
     devel_branch: ros2
+    last_version: 2.1.0
     name: upstream
     patches: null
-    release_inc: 0
+    release_inc: '1'
     release_repo_url: git@github.com:vooon/ntpd_driver-release.git
     release_tag: :{version}
     ros_distro: galactic
