--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ntpd_driver
-	previous = 
-	base = 415317e
+	previous = 415317e
+	base = 90e59c9
 	trim = 
 	trimbase = 
