--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ntpd_driver
-	previous = 
-	base = 7cfeb0f
+	previous = 7cfeb0f
+	base = b3d29fc
 	trim = 
 	trimbase = 
