--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ntpd_driver
-	previous = 
-	base = 44ac70c
+	previous = 44ac70c
+	base = 8d780a0
 	trim = 
 	trimbase = 
