--- a/package.xml
+++ b/package.xml
@@ -1,34 +1,30 @@
-<?xml version="1.0" encoding="utf-8"?>
-<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
-<package format="3">
+<?xml version="1.0"?>
+<package format="2">
   <name>ntpd_driver</name>
-  <version>2.1.0</version>
+  <version>1.3.0</version>
   <description>ntpd_driver sends TimeReference message time to ntpd server</description>
 
   <maintainer email="vooon341@gmail.com">Vladimir Ermakov</maintainer>
-  <license file="LICENSE">BSD</license>
+  <author email="vooon341@gmail.com">Vladimir Ermakov</author>
+
+  <license>BSD</license>
 
   <url type="website">http://wiki.ros.org/ntpd_driver</url>
   <url type="repository">https://github.com/vooon/ntpd_driver.git</url>
   <url type="bugtracker">https://github.com/vooon/ntpd_driver/issues</url>
 
-  <author email="vooon341@gmail.com">Vladimir Ermakov</author>
+  <buildtool_depend>catkin</buildtool_depend>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
-
-  <depend>rclcpp</depend>
-  <depend>rclcpp_components</depend>
+  <depend>message_generation</depend>
+  <depend>message_runtime</depend>
+  <depend>roscpp</depend>
   <depend>sensor_msgs</depend>
+  <depend>cmake_modules</depend>
   <depend>libpoco-dev</depend>
 
-  <!-- <exec_depend>launch_xml</exec_depend> -->
 
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
-
+  <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <build_type>ament_cmake</build_type>
-
     <rosindex>
       <tags>
         <tag>ntp</tag>
@@ -43,7 +39,6 @@
           <ros_api>
             <sub name="~/time_ref" type="sensor_msgs/TimeReference">Time source topic. (default topic name)</sub>
             <param name="~/shm_unit" type="int" default="2">SHM Unit (must be same as in ntp server config).</param>
-            <param name="~/time_ref_topic" type="string" default="time_ref">Topic name (may be used instead of remap).</param>
             <param name="~/fixup_date" type="bool" default="false">Enable date fixup.</param>
           </ros_api>
         </node>
