--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,9 @@ jobs:
     strategy:
       matrix:
         env:
-          # - {ROS_DISTRO: melodic, ROS_REPO: testing}
-          - {ROS_DISTRO: melodic, ROS_REPO: main}
-          - {ROS_DISTRO: noetic, ROS_REPO: main}
+          - {ROS_DISTRO: foxy, ROS_REPO: main}
+          - {ROS_DISTRO: humble, ROS_REPO: main}
+          - {ROS_DISTRO: rolling, ROS_REPO: main}
     env:
       CCACHE_DIR: /github/home/.ccache
     runs-on: ubuntu-latest
